// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiText is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1lo1kz-euiText-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props color & align 1`] = `
<div
  aria-label="aria-label"
  class="css-w0k17c-euiText-m-euiTextColor-danger-euiTextAlign-center"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props grow false 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-j3htvy-euiText-constrainedWidth-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props style 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1rhs9x7-euiText-m-euiTextColor-customColor"
  data-test-subj="test subject string"
  style="background-color:#000;color:#fff"
>
  <p>
    Content
  </p>
</div>
`;
